gitops/clusters/homelab/apps/private/lex-bg-connector/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: lex-bg-connector
  namespace: private
spec:
  selector:
    app: lex-bg-connector
  ports:
    - port: 80
      targetPort: 3200
