gitops/clusters/homelab/apps/private/lex-bg-connector/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: lex-bg-connector
  namespace: private
spec:
  entryPoints:
    - private-web-secure
  routes:
    - match: Host(`data-source-example.internal.pavel-usanli.online`)
      kind: Rule
      services:
        - name: lex-bg-connector
          port: 80
  tls:
    certResolver: cloudflare
